# 23210-Yakuba

./: .gitignore  .gitmodules  README.md
CircularBuffer/: CMakeLists.txt
CircularBuffer/include/: CircularBuffer.h
CircularBuffer/src/: CircularBuffer.cpp  main.cpp
CircularBuffer/tests/: tests_circular_buffer.cpp
lab0/: README.md  file_1.txt  fileout.csv  main.app  main.cpp
lab2-GameofLife/: CMakeLists.txt  base.life
lab2-GameofLife/include/: Controller.h  Field.h  Handler_file.h  Model.h  View.h
lab2-GameofLife/src/: Controller.cpp  Field.cpp  Handler_file.cpp  Model.cpp  View.cpp  main.cpp
lab3-SoundProcessor/: CMakeLists.txt
lab3-SoundProcessor/include/: ChangeVolConverter.h  DataSource.h  DataWriter.h  Factory.h  IConverter.h  MixConverter.h  MuteConverter.h  Processor.h  WavHeader.h
lab3-SoundProcessor/src/: ChangeVolConverter.cpp  DataSource.cpp  DataWriter.cpp  MixConverter.cpp  MuteConverter.cpp  Processor.cpp  main.cpp
lab4/: CMakeLists.txt
lab4/include/: csvparser.h  tuple_printer.h
lab4/src/: main.cpp
